# wildberries_bot_team_3

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  postgres-local.yaml
bot/: .pre-commit-config.yaml  Dockerfile  config.py  constants.py  env.example  keyboards.py  main.py  pyproject.toml  settings.py  telegram_bot.py
bot/constants/: buttons.py  callback_data.py  constant.py  constants.py  data_constants.py  keyboards.py  messages.py  parser_constants.py  states.py
bot/handlers/: menu.py  position.py  rate.py  registration.py  stock.py  subscription.py
bot/services/: aio_client.py  job_queue.py  many_cities_position.py  parsers.py  positioin.py  position.py  services.py  stock.py  wh_ratio.py
expert_system/: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-entrypoint.sh  env.example  pyproject.toml
expert_system/expert_system/api/: serializers.py  urls.py
expert_system/expert_system/config/: settings.py
expert_system/expert_system/data_handler/: admin.py  models.py  views.py
expert_system/expert_system/data_handler/migrations/: 0001_initial.py
expert_system/expert_system/users/: models.py
expert_system/wb/config/: settings.py
