[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Александр Лыо <al.lyo@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.1.1"
flake8 = "^6.0.0"
python-telegram-bot = {extras = ["ext"], version = "^20.3"}
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
